--- a/Semana2/indexSem2.html
+++ b/Semana2/indexSem2.html
@@ -10,11 +10,12 @@
 <body>
     <!-- Form: Envuelve las etiquetas de un formulario -->
     <form action="">
-        <!-- Fieldset: Se utiliza para crear cuadros de texto -->
+        <!-- Fieldset: Se utiliza para crear recuadro -->
+        <!-- Legend: Nombre o Legenda del recuadro -->
+        <!-- Input: Recuadro para ingresar información-->
+        <!-- Placeholder: Poner un ejemplo o plantilla dentro del recuadro input -->
         <fieldset>
             <legend>Nombre</legend>
-            <!-- Input: Recuadro para ingresar información-->
-            <!-- Placeholder: Poner un ejemplo o plantilla dentro del recuadro input -->
             <input type="text" placeholder="Nombre">
         </fieldset>
         <fieldset>
