--- a/Semana2/indexSem2.html
+++ b/Semana2/indexSem2.html
@@ -8,7 +8,7 @@
 </head>
 <!--  Creación de Formulario-->
 <body>
-    <!-- Form: Envuelve las etiquetas de un formulario -->
+    <!-- Form: Envuelve los elementos de un formulario -->
     <form action="">
         <!-- Fieldset: Se utiliza para crear recuadro -->
         <!-- Legend: Nombre o Legenda del recuadro -->
