--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
             <main>
                 <div>
                     <h4>Temas</h4>
+                    <!-- Contenedor de listas -->
                     <ul>
+                        <!-- El hijo de la lista     -->
                         <li>
-                            <a href="http://127.0.0.1:5500/Semana2/Formulario.html"></a>
+                            <a href="http://127.0.0.1:5500/Semana2/Formulario.html">Formulario</a>
                         </li>
                         <li>
-                            <a href="./tablas.html"></a>
+                            <a href="./tablas.html">Tablas</a>
                         </li>
                     </ul>
                  </div>
