--- a/index.html
+++ b/index.html
@@ -1,68 +1,111 @@
 <html>
-    <!-- Nombre de la página web -->
-    <head>
-        <title>
-            Inicio
-        </title>
-    </head>
-    <body>
-        <!-- Ctrl + k + u (comentario en windows)-->
-        <!-- cmd + / (comentario en mac) -->
-        <!-- Header, Main y Footer me permitirá especificar y generar mayor orden al momento de programar -->
-        <!--Encabezado-->
-        <!-- div es un elemento para englobar un grupo de elementos, donde se puede generar cambios a todo el grupo con otros elementos -->
-         <div style="width: 800px; margin: 10px auto;">
-            <header style="text-align: center;">
-                <h1>Apple.com</h1>
-                <!-- P = Párrafo -->
-                <p>Productos Top</p>
-            </header>
-            <!-- Cuerpo de la página -->
-            <main>
-                <div>
-                    <h4>Temas</h4>
-                    <!-- Contenedor de listas -->
-                    <ul>
-                        <!-- El hijo de la lista     -->
-                        <li>
-                            <a href="http://127.0.0.1:5500/Semana2/Formulario.html">Formulario</a>
-                        </li>
-                        <li>
-                            <a href="./tablas.html">Tablas</a>
-                        </li>
-                    </ul>
-                 </div>
-                <!-- Creación de una tabla / tr = fila (table row) / td = celdas (table data) / th = Fila encabezado(table header)-->
-                <table>
-                    <!-- Una fila con tres celdas -->
-                    <tr>
-                        <td>
-                            <div>
-                                <h2>iPhone 13</h2>
-                                <!-- img = imagen / src = Indica la ruta de la imagen / alt = Permite escuchar lo que se encuentra escrito -->
-                                <img src="https://i.linio.com/p/bb59a49b41823a4feb037e4c9d438a7b-product.webp" alt="Foto de un iPhone 13 Negro">
-                            </div>
-                        </td>
-                        <td>
-                            <div style="border: 2px solid #ccc; border-radius: 10px; padding: 10px; margin: 20;">
-                                <!-- Se le agregará "width" como una propiedad de HTML para cambiar el tamaño -->
-                                <h2 style="width: 200px">Macbook Pro</h2>
-                                 <img width="200px" src="https://i.blogs.es/e1fe2b/apple-macbook-pro-16/1024_2000.jpg" alt="">
-                            </div>
-                        </td>
-                        <td>
-                            <div style="border: 2px solid #ccc; border-radius: 10px; padding: 10px; margin: 20;">
-                                <h2>Airpods Pro</h2>
-                                <img width="200px" src="https://www.mac-center.com.pe/ccstore/v1/images/?source=/file/v5458383034345506899/products/Airpods_Pro.jpg&height=475&width=475" alt="">
-                            </div>
-                        </td>
-                    </tr>
-                </table>           
-            </main>
-            <!-- Parte inferior de la página -->
-            <footer>
-                <p style="text-align: center;">Hecho con cariño por Código</p>
-            </footer>
-         </div>
-    </body>
+  <head>
+    <title>Inicio</title>
+    <link rel="stylesheet" href="./css/Styles.css">
+  </head>
+  <body>
+    <div style="width: 800px; margin: 10px auto">
+      <header>
+        <h1>Apple.com</h1>
+        <p style="text-align: center">Productos top</p>
+      </header>
+      <main>
+        <div id="div_temas">
+          <h4>Temas</h4>
+          <ul>
+            <li>
+              <a href="./formulario.html">Formularios</a>
+            </li>
+            <li>
+              <a href="./tablas.html">Tablas</a>
+            </li>
+          </ul>
+        </div>
+        <table>
+          <tr>
+            <td>
+              <div class="product_cell iphone">
+                <h2>iPhone 13</h2>
+                <h3 class="price">1400</h3>
+                <img
+                  width="200px"
+                  src="https://images.unsplash.com/photo-1632633173522-47456de71b76?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=871&q=80"
+                  alt="Foto de iPhone 13 color silver"
+                />
+              </div>
+            </td>
+            <td>
+              <div class="product_cell laptop">
+                <h2>Macbook Pro</h2>
+                <h3 class="price">1299</h3>
+                <img
+                  width="200px"
+                  src="https://images.unsplash.com/photo-1615750185825-fc85c6aba18d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                  alt="Foto de macbook pro abierta"
+                />
+              </div>
+            </td>
+            <td>
+            <div class="product_cell airpods">
+                <h2>Airpods Pro</h2>
+                <h3>$ 200</h3>
+                <img
+                  width="200px"
+                  src="https://images.unsplash.com/photo-1600294037681-c80b4cb5b434?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                  alt="Foto de airpods pro"
+                />
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+               <div class="product_cell iphone">
+                <h2>iPhone 14</h2>
+                <h3>$1700</h3>
+                <img
+                  width="200px"
+                  src="https://images.unsplash.com/photo-1653921167679-7676ed531a58?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1031&q=80"
+                  alt="Foto de iPhone 13 color silver"
+                />
+              </div>
+            </td>
+            <td>
+              <div class="product_cell laptop">
+                <h2>Macbook Air</h2>
+               <h3>$ 999</h3>
+                <img
+                  width="200px"
+                  src="https://images.unsplash.com/photo-1532198528077-0d9e4ca9bb40?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=847&q=80"
+                  alt="Foto de macbook pro abierta"
+                />
+              </div>
+            </td>
+            <td>
+                <div class="product_cell airpods">
+                <h2>Airpods Max</h2>
+                <h3>$ 500</h3>
+                <img
+                  width="200px"
+                  src="https://images.unsplash.com/photo-1625245488600-f03fef636a3c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80"
+                  alt="Foto de airpods pro"
+                />
+              </div>
+            </td>
+          </tr>
+        </table>
+        <section>
+            <h2>Contacto</h2>
+            <div class="div_form">
+                <form action="#">
+                    <input type="text" name="" id="">
+                    <button type="submit">Enviar</button>
+                </form>
+            </div>
+        </section>
+      </main>
+      <footer>
+        <p style="text-align: center">Hecho con cariño por Código</p>
+      </footer>
+    </div>
+  </body>
 </html>
