--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     rel="stylesheet"
     />
 
-    <!-- NotO Sans JP -->
+    <!-- Noto Sans JP -->
     <link 
     href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@700&family=Poppins:ital,wght@0,200;0,400;0,600;1,500;1,700&display=swap" 
     rel="stylesheet"
@@ -34,6 +34,9 @@
             </li>
             <li>
               <a href="./tablas.html">Tablas</a>
+            </li>
+            <li>
+              <a href="./reto1.html">Reto 1</a>
             </li>
           </ul>
         </div>
