--- a/reto1.html
+++ b/reto1.html
@@ -35,6 +35,11 @@
           <img src="./images/icon-cart.svg" alt="" />
           Add to Cart
         </button>
+        <!-- Botón de compra rápida -->
+        <button class="fastbutton">
+          <img src="./images/icon-cart.svg" alt="" />
+          1-click Purchase
+        </button>
       </div>
     </div>
   </body>
