--- a/Retos/reto5/index.html
+++ b/Retos/reto5/index.html
@@ -15,7 +15,39 @@
 </head>
 <body>
     <div class="grid-container">
-        <h1 class="header">Notifications</h1>
+        <div class="header">
+            <h1>Notifications <span class="badge">3</span></h1>
+            <a href="#">Mark all as read</a>
+        </div>
+        <div class="main">
+            <div class="card unread">
+                <div class="avatar">
+                    <img src="./assets/images/avatar-mark-webber.webp" alt="">
+                </div>
+                <div class="content">
+                    <strong>Mark weber</strong>&nbsp;<span class="text">Texto Lorem, ipsum dolor</span>
+                    <p class="time">1m ago</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="avatar">
+                    <img src="./assets/images/avatar-angela-gray.webp" alt="">
+                </div>
+                <div class="content">
+                    <strong>Angela Gray</strong>&nbsp;<span class="text">Texto Lorem, ipsum dolor</span>
+                    <p class="time">1m ago</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="avatar">
+                    <img src="./assets/images/avatar-jacob-thompson.webp" alt="">
+                </div>
+                <div class="content">
+                    <strong>Jacob Thompson</strong>&nbsp;<span class="text">Texto Lorem, ipsum dolor</span>
+                    <p class="time">1m ago</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
