--- a/javascript/semana5/variables.html
+++ b/javascript/semana5/variables.html
@@ -10,6 +10,9 @@
     <H1>Nuestro primer día con JS</H1>
     <!-- Como podemos vincular nuestros JS -->
     <!-- Como recomndación va al final del body -->
-    <script src="./funciones.js"></script>
+    <!-- <script src="./funciones.js"></script> -->
+    <!-- <script src="./operadores.js"></script> -->
+    <!-- <script src="./condiciones.js"></script> -->
+    <script src="./arreglos.js"></script>
 </body>
 </html>
