--- a/Semana 7/Todolist/index.html
+++ b/Semana 7/Todolist/index.html
@@ -11,23 +11,16 @@
     <main class="container">
         <div class="container_title">
             <h3>TODO - List</h3>
-
-            <input type="text" placeholder="Ingresa el nombre de la tarea" />
-            <button>Crear Tarea</button>
+            <input 
+            type="text" 
+            class="input_task" 
+            placeholder="Ingresa el nombre de la tarea" 
+            />
+            <button class="btn_create">Crear Tarea</button>
         </div>
         <div class="container_list_task">
-            <div class="item_task">
-                <input type="checkbox" />
-                <h6>Nombre de tarea</h6>
-                <button>
-                    <img src="https://cdn.discordapp.com/attachments/1013855300333359206/1029912672000553050/delete.png" width="15" alt="">
-                </button>
-                <button>
-                    <img src="https://cdn.discordapp.com/attachments/1013855300333359206/1029912672705187891/edit.png"  width="15" alt="">
-                </button>
-            </div>
         </div>
     </main>
-    <script src="./index.js"></script>
+    <script src="./index.js" type="module"></script>
 </body>
 </html>
